--- a/client/main.css
+++ b/client/main.css
@@ -1,11 +1,21 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
+  background-color: brown;
 }
 
 .simple-todos-react {
   margin: 0 auto;
   max-width: 512px;
+  border: 1px solid gray;
+  padding: 15px;
+  margin-top: 50px;
+  background-color: whitesmoke;
+}
+
+h1 {
+  text-align: center;
+  border-bottom: .5px solid gray;
 }
 
 .simple-todos-react .filters {
